--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -333,3 +333,352 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+
+@article{DBLP:journals/iacr/Shoup01,
+  author       = {Victor Shoup},
+  title        = {A Proposal for an {ISO} Standard for Public Key Encryption},
+  journal      = {{IACR} Cryptol. ePrint Arch.},
+  pages        = {112},
+  year         = {2001},
+  url          = {http://eprint.iacr.org/2001/112},
+  timestamp    = {Mon, 11 May 2020 15:58:31 +0200},
+  biburl       = {https://dblp.org/rec/journals/iacr/Shoup01.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/eurocrypt/Shoup00a,
+  author       = {Victor Shoup},
+  editor       = {Bart Preneel},
+  title        = {Using Hash Functions as a Hedge against Chosen Ciphertext Attack},
+  booktitle    = {Advances in Cryptology - {EUROCRYPT} 2000, International Conference
+                  on the Theory and Application of Cryptographic Techniques, Bruges,
+                  Belgium, May 14-18, 2000, Proceeding},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {1807},
+  pages        = {275--288},
+  publisher    = {Springer},
+  year         = {2000},
+  url          = {https://doi.org/10.1007/3-540-45539-6\_19},
+  doi          = {10.1007/3-540-45539-6\_19},
+  timestamp    = {Tue, 14 May 2019 10:00:53 +0200},
+  biburl       = {https://dblp.org/rec/conf/eurocrypt/Shoup00a.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/ima/Dent03,
+  author       = {Alexander W. Dent},
+  editor       = {Kenneth G. Paterson},
+  title        = {A Designer's Guide to KEMs},
+  booktitle    = {Cryptography and Coding, 9th {IMA} International Conference, Cirencester,
+                  UK, December 16-18, 2003, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {2898},
+  pages        = {133--151},
+  publisher    = {Springer},
+  year         = {2003},
+  url          = {https://doi.org/10.1007/978-3-540-40974-8\_12},
+  doi          = {10.1007/978-3-540-40974-8\_12},
+  timestamp    = {Wed, 18 Mar 2020 16:01:02 +0100},
+  biburl       = {https://dblp.org/rec/conf/ima/Dent03.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@article{DBLP:journals/iacr/BernsteinP18,
+  author       = {Daniel J. Bernstein and
+                  Edoardo Persichetti},
+  title        = {Towards {KEM} Unification},
+  journal      = {{IACR} Cryptol. ePrint Arch.},
+  pages        = {526},
+  year         = {2018},
+  url          = {https://eprint.iacr.org/2018/526},
+  timestamp    = {Mon, 11 May 2020 15:54:43 +0200},
+  biburl       = {https://dblp.org/rec/journals/iacr/BernsteinP18.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/asiacrypt/HovelmannsHM22,
+  author       = {Kathrin H{\"{o}}velmanns and
+                  Andreas H{\"{u}}lsing and
+                  Christian Majenz},
+  editor       = {Shweta Agrawal and
+                  Dongdai Lin},
+  title        = {Failing Gracefully: Decryption Failures and the Fujisaki-Okamoto Transform},
+  booktitle    = {Advances in Cryptology - {ASIACRYPT} 2022 - 28th International Conference
+                  on the Theory and Application of Cryptology and Information Security,
+                  Taipei, Taiwan, December 5-9, 2022, Proceedings, Part {IV}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {13794},
+  pages        = {414--443},
+  publisher    = {Springer},
+  year         = {2022},
+  url          = {https://doi.org/10.1007/978-3-031-22972-5\_15},
+  doi          = {10.1007/978-3-031-22972-5\_15},
+  timestamp    = {Mon, 26 Jun 2023 20:47:19 +0200},
+  biburl       = {https://dblp.org/rec/conf/asiacrypt/HovelmannsHM22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/pqcrypto/XagawaY19,
+  author       = {Keita Xagawa and
+                  Takashi Yamakawa},
+  editor       = {Jintai Ding and
+                  Rainer Steinwandt},
+  title        = {(Tightly) QCCA-Secure Key-Encapsulation Mechanism in the Quantum Random
+                  Oracle Model},
+  booktitle    = {Post-Quantum Cryptography - 10th International Conference, PQCrypto
+                  2019, Chongqing, China, May 8-10, 2019 Revised Selected Papers},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {11505},
+  pages        = {249--268},
+  publisher    = {Springer},
+  year         = {2019},
+  url          = {https://doi.org/10.1007/978-3-030-25510-7\_14},
+  doi          = {10.1007/978-3-030-25510-7\_14},
+  timestamp    = {Wed, 25 Sep 2019 18:02:54 +0200},
+  biburl       = {https://dblp.org/rec/conf/pqcrypto/XagawaY19.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/crypto/JiangZCWM18,
+  author       = {Haodong Jiang and
+                  Zhenfeng Zhang and
+                  Long Chen and
+                  Hong Wang and
+                  Zhi Ma},
+  editor       = {Hovav Shacham and
+                  Alexandra Boldyreva},
+  title        = {IND-CCA-Secure Key Encapsulation Mechanism in the Quantum Random Oracle
+                  Model, Revisited},
+  booktitle    = {Advances in Cryptology - {CRYPTO} 2018 - 38th Annual International
+                  Cryptology Conference, Santa Barbara, CA, USA, August 19-23, 2018,
+                  Proceedings, Part {III}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {10993},
+  pages        = {96--125},
+  publisher    = {Springer},
+  year         = {2018},
+  url          = {https://doi.org/10.1007/978-3-319-96878-0\_4},
+  doi          = {10.1007/978-3-319-96878-0\_4},
+  timestamp    = {Mon, 15 Apr 2024 21:32:44 +0200},
+  biburl       = {https://dblp.org/rec/conf/crypto/JiangZCWM18.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/eurosp/BosDKLLSSSS18,
+  author       = {Joppe W. Bos and
+                  L{\'{e}}o Ducas and
+                  Eike Kiltz and
+                  Tancr{\`{e}}de Lepoint and
+                  Vadim Lyubashevsky and
+                  John M. Schanck and
+                  Peter Schwabe and
+                  Gregor Seiler and
+                  Damien Stehl{\'{e}}},
+  title        = {{CRYSTALS} - Kyber: {A} CCA-Secure Module-Lattice-Based {KEM}},
+  booktitle    = {2018 {IEEE} European Symposium on Security and Privacy, EuroS{\&}P
+                  2018, London, United Kingdom, April 24-26, 2018},
+  pages        = {353--367},
+  publisher    = {{IEEE}},
+  year         = {2018},
+  url          = {https://doi.org/10.1109/EuroSP.2018.00032},
+  doi          = {10.1109/EUROSP.2018.00032},
+  timestamp    = {Wed, 16 Oct 2019 14:14:55 +0200},
+  biburl       = {https://dblp.org/rec/conf/eurosp/BosDKLLSSSS18.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/africacrypt/DAnversKRV18,
+  author       = {Jan{-}Pieter D'Anvers and
+                  Angshuman Karmakar and
+                  Sujoy Sinha Roy and
+                  Frederik Vercauteren},
+  editor       = {Antoine Joux and
+                  Abderrahmane Nitaj and
+                  Tajjeeddine Rachidi},
+  title        = {Saber: Module-LWR Based Key Exchange, CPA-Secure Encryption and CCA-Secure
+                  {KEM}},
+  booktitle    = {Progress in Cryptology - {AFRICACRYPT} 2018 - 10th International Conference
+                  on Cryptology in Africa, Marrakesh, Morocco, May 7-9, 2018, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {10831},
+  pages        = {282--305},
+  publisher    = {Springer},
+  year         = {2018},
+  url          = {https://doi.org/10.1007/978-3-319-89339-6\_16},
+  doi          = {10.1007/978-3-319-89339-6\_16},
+  timestamp    = {Sat, 30 Sep 2023 09:33:45 +0200},
+  biburl       = {https://dblp.org/rec/conf/africacrypt/DAnversKRV18.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/ccs/BosCDMNNRS16,
+  author       = {Joppe W. Bos and
+                  Craig Costello and
+                  L{\'{e}}o Ducas and
+                  Ilya Mironov and
+                  Michael Naehrig and
+                  Valeria Nikolaenko and
+                  Ananth Raghunathan and
+                  Douglas Stebila},
+  editor       = {Edgar R. Weippl and
+                  Stefan Katzenbeisser and
+                  Christopher Kruegel and
+                  Andrew C. Myers and
+                  Shai Halevi},
+  title        = {Frodo: Take off the Ring! Practical, Quantum-Secure Key Exchange from
+                  {LWE}},
+  booktitle    = {Proceedings of the 2016 {ACM} {SIGSAC} Conference on Computer and
+                  Communications Security, Vienna, Austria, October 24-28, 2016},
+  pages        = {1006--1018},
+  publisher    = {{ACM}},
+  year         = {2016},
+  url          = {https://doi.org/10.1145/2976749.2978425},
+  doi          = {10.1145/2976749.2978425},
+  timestamp    = {Tue, 07 May 2024 20:04:53 +0200},
+  biburl       = {https://dblp.org/rec/conf/ccs/BosCDMNNRS16.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/ches/BernsteinCS13,
+  author       = {Daniel J. Bernstein and
+                  Tung Chou and
+                  Peter Schwabe},
+  editor       = {Guido Bertoni and
+                  Jean{-}S{\'{e}}bastien Coron},
+  title        = {McBits: Fast Constant-Time Code-Based Cryptography},
+  booktitle    = {Cryptographic Hardware and Embedded Systems - {CHES} 2013 - 15th International
+                  Workshop, Santa Barbara, CA, USA, August 20-23, 2013. Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {8086},
+  pages        = {250--272},
+  publisher    = {Springer},
+  year         = {2013},
+  url          = {https://doi.org/10.1007/978-3-642-40349-1\_15},
+  doi          = {10.1007/978-3-642-40349-1\_15},
+  timestamp    = {Fri, 09 Apr 2021 18:49:53 +0200},
+  biburl       = {https://dblp.org/rec/conf/ches/BernsteinCS13.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@article{DBLP:journals/iacr/Bernstein21,
+  author       = {Daniel J. Bernstein},
+  title        = {On the looseness of {FO} derandomization},
+  journal      = {{IACR} Cryptol. ePrint Arch.},
+  pages        = {912},
+  year         = {2021},
+  url          = {https://eprint.iacr.org/2021/912},
+  timestamp    = {Mon, 09 Aug 2021 16:25:39 +0200},
+  biburl       = {https://dblp.org/rec/journals/iacr/Bernstein21.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@article{DBLP:journals/tches/UenoXTITH22,
+  author       = {Rei Ueno and
+                  Keita Xagawa and
+                  Yutaro Tanaka and
+                  Akira Ito and
+                  Junko Takahashi and
+                  Naofumi Homma},
+  title        = {Curse of Re-encryption: {A} Generic Power/EM Analysis on Post-Quantum
+                  KEMs},
+  journal      = {{IACR} Trans. Cryptogr. Hardw. Embed. Syst.},
+  volume       = {2022},
+  number       = {1},
+  pages        = {296--322},
+  year         = {2022},
+  url          = {https://doi.org/10.46586/tches.v2022.i1.296-322},
+  doi          = {10.46586/TCHES.V2022.I1.296-322},
+  timestamp    = {Tue, 07 May 2024 20:26:05 +0200},
+  biburl       = {https://dblp.org/rec/journals/tches/UenoXTITH22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@article{DBLP:journals/tches/TanakaUXITH23,
+  author       = {Yutaro Tanaka and
+                  Rei Ueno and
+                  Keita Xagawa and
+                  Akira Ito and
+                  Junko Takahashi and
+                  Naofumi Homma},
+  title        = {Multiple-Valued Plaintext-Checking Side-Channel Attacks on Post-Quantum
+                  KEMs},
+  journal      = {{IACR} Trans. Cryptogr. Hardw. Embed. Syst.},
+  volume       = {2023},
+  number       = {3},
+  pages        = {473--503},
+  year         = {2023},
+  url          = {https://doi.org/10.46586/tches.v2023.i3.473-503},
+  doi          = {10.46586/TCHES.V2023.I3.473-503},
+  timestamp    = {Tue, 07 May 2024 20:26:05 +0200},
+  biburl       = {https://dblp.org/rec/journals/tches/TanakaUXITH23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@inproceedings{DBLP:conf/acns/Huguenin-Dumittan20,
+  author       = {Lo{\"{\i}}s Huguenin{-}Dumittan and
+                  Serge Vaudenay},
+  editor       = {Mauro Conti and
+                  Jianying Zhou and
+                  Emiliano Casalicchio and
+                  Angelo Spognardi},
+  title        = {Classical Misuse Attacks on {NIST} Round 2 {PQC} - The Power of Rank-Based
+                  Schemes},
+  booktitle    = {Applied Cryptography and Network Security - 18th International Conference,
+                  {ACNS} 2020, Rome, Italy, October 19-22, 2020, Proceedings, Part {I}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {12146},
+  pages        = {208--227},
+  publisher    = {Springer},
+  year         = {2020},
+  url          = {https://doi.org/10.1007/978-3-030-57808-4\_11},
+  doi          = {10.1007/978-3-030-57808-4\_11},
+  timestamp    = {Thu, 27 Aug 2020 11:52:14 +0200},
+  biburl       = {https://dblp.org/rec/conf/acns/Huguenin-Dumittan20.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{cryptoeprint:2021/912,
+      author = {Daniel J.  Bernstein},
+      title = {{FO} derandomization sometimes damages security},
+      howpublished = {Cryptology {ePrint} Archive, Paper 2021/912},
+      year = {2021},
+      url = {https://eprint.iacr.org/2021/912}
+}
+
+
+@inproceedings{DBLP:conf/stoc/GoldwasserM82,
+  author       = {Shafi Goldwasser and
+                  Silvio Micali},
+  editor       = {Harry R. Lewis and
+                  Barbara B. Simons and
+                  Walter A. Burkhard and
+                  Lawrence H. Landweber},
+  title        = {Probabilistic Encryption and How to Play Mental Poker Keeping Secret
+                  All Partial Information},
+  booktitle    = {Proceedings of the 14th Annual {ACM} Symposium on Theory of Computing,
+                  May 5-7, 1982, San Francisco, California, {USA}},
+  pages        = {365--377},
+  publisher    = {{ACM}},
+  year         = {1982},
+  url          = {https://doi.org/10.1145/800070.802212},
+  doi          = {10.1145/800070.802212},
+  timestamp    = {Wed, 14 Nov 2018 10:51:38 +0100},
+  biburl       = {https://dblp.org/rec/conf/stoc/GoldwasserM82.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
